--- a/modèle bayésien/Modèle bayésien (simulation).Rmd
+++ b/modèle bayésien/Modèle bayésien (simulation).Rmd
@@ -14,7 +14,7 @@ document xls qui résume sur quoi nous avons fait tourner, les modèles
 utilisées...*
 
 ***!** Ce script n'a pas été fait dans un ordre chronologique donc il
-peut y avoir des explications à postériori. **!***
+peut y avoir des explications à postériori **!***
 
 *\_pred : modèles contenant les prédictions*
 
@@ -309,10 +309,10 @@ mcmc_trace(fit_JV_1)
 saveRDS(fit_JV_1, file = "fit_JV_1.rds")
 ```
 
-# *fit_VP_1*
+# fit_VP_1
 
-*Est-ce que un modèle non linéaire prédit mieux la présence de Pradosia
-et Vouacapou au tempérament changeant ? 1 = Vouacapou , 2 = Pradosia*
+Est-ce que un modèle non linéaire prédit mieux la présence de Pradosia
+et Vouacapou au tempérament changeant ? 1 = Vouacapou , 2 = Pradosia
 
 ```{r importation_VP_1}
 # Variable à expliquer
@@ -354,13 +354,13 @@ mcmc_trace(fit_VP_1)
 saveRDS(fit_VP_1, file = "fit_VP_1.rds")
 ```
 
-## *Polynome + G*
+## Polynome + G
 
-*Nous avons pu voir précédemment que la mise en place d'une
+Nous avons pu voir précédemment que la mise en place d'une
 transformation logarithmique renseigner pouvais apporter plus
-d'information à nos priors.*
+d'information à nos priors.
 
-*1 = Vouacaoupa 2 = Pradosia*
+1 = Vouacaoupa 2 = Pradosia
 
 ```{r importation_fit_VP_1(v2), include = FALSE}
 # le modele
@@ -403,17 +403,17 @@ mcmc_trace(fit_VP_1_polyG)
 saveRDS(fit_VP_1_polyG, file = "fit_VP_1_polyG.rds")
 ```
 
-*Ok ça converge bien. L'interprétation étant difficile, nous allons
-centrer réduire notre modèle.*
+Ok ça converge bien. L'interprétation étant difficile, nous allons
+centrer réduire notre modèle.
 
-## *Centre et réduit*
+## Centre et réduit
 
-*Nous avons pu voir précédemment que la mise en place d'une
+Nous avons pu voir précédemment que la mise en place d'une
 transformation logarithmique renseigner pouvais apporter plus
 d'information à nos priors, nous allons également centrée et réduire (cf
-cahier pour plus d'explications)*
+cahier pour plus d'explications)
 
-*1 = Vouacaoupa 2 = Pradosia*
+1 = Vouacaoupa 2 = Pradosia
 
 ```{r importation_fit_VP_1(v2), include = FALSE}
 # le modele
@@ -456,25 +456,25 @@ mcmc_trace(fit_VP_cr)
 saveRDS(fit_VP_cr, file = "fit_VP_cr.rds")
 ```
 
-# *Prédictions*
+# Prédictions
 
-*Maintenant que l'ensemble de nos modèles tournent et que ça parait
+Maintenant que l'ensemble de nos modèles tournent et que ça parait
 logique. Nous allons créer un modèle qui nous permet de visualiser ce
 qu'il se passe avec des graphes. Pour cela nous avons ajouter les
-prédictions aux modèles.*
+prédictions aux modèles.
 
-## *DBH*
+## DBH
 
-*Nous cherchons à faire un graphe pour pouvoir vérifier que ce qu'on a
+Nous cherchons à faire un graphe pour pouvoir vérifier que ce qu'on a
 fait est bien juste. Pour le tableau des matrices, 2 = Qualea, 5 =
-Jacaranda Pour les résultats du modèle, 2 = Qualea, 1 = Jacaranda*
+Jacaranda Pour les résultats du modèle, 2 = Qualea, 1 = Jacaranda
 
 ```{r importation fit_DBH_pred}
 fit_DBH_pred <- read_rds("~/cours_r/Stage_M2/Bayesien_save/fit_DBH_pred.rds")
 ```
 
-*Il y a un problème dans mon modèle je l'ai écrit et paramétrer n'imp
-où*
+**Il y a un problème dans mon modèle je l'ai écrit et paramétrer n'imp
+où**
 
 ```{r fit_DBH_pred}
 N = BD_JQ %>%
@@ -529,15 +529,15 @@ plot(X_pred, apply(y_qualea, 2, mean))
 
 ```
 
-## *Surface terrière*
+## Surface terrière
 
 ```{r importation_fit_surfaceterriere}
 fit_surfaceterriere <- read_rds()
 ```
 
-*Dans le jeu de donnée 3 = Vouacapoua 4 = Pradosia.*
+Dans le jeu de donnée 3 = Vouacapoua 4 = Pradosia.
 
-*Dans la sortie 1 = Vouacapoua, 2 = Pradosia.*
+Dans la sortie 1 = Vouacapoua, 2 = Pradosia.
 
 ```{r fit_predict}
 # Nombre d'observations
@@ -593,9 +593,9 @@ plot(Z_pred, apply(y_vouacapou, 2, mean))
 
 ## *Surface terrière + DBH*
 
-*Celui où il y a l'ensemble de l'équation qui est également centrée
+Celui où il y a l'ensemble de l'équation qui est également centrée
 réduit. Nous allons faire tourner le fat modèle. Nous allons le faire
-tourner sur Jacaranda et Qualea*
+tourner sur Jacaranda et Qualea.
 
 ```{r importation fit_fat}
 fit_fat <- read_rds(fit_fat,"~/cours_r/Stage_M2/Bayesien_save/fit_fat.rds")
@@ -692,7 +692,6 @@ plot(Z_pred, apply(Y_qualea_z, 2, mean))
 plot(X_pred, apply(Y_qualea_x, 2, mean))
 ```
 
-
 ```{r G_graph}
 # Créer un dataframe vide pour stocker les données
 esp_G <- data.frame()
@@ -730,6 +729,7 @@ plot_G <- ggplot(esp_graphe, aes(x = Z_pred, color = Species)) +
     panel.grid.minor.y = element_line(color = "grey90", size = 0.1)
   )
 ```
+
 Maintenant faisons celui avec les X
 
 ```{r DBH_grahe}
@@ -771,6 +771,7 @@ plot_DBH <- ggplot(esp_DBH, aes(x = X_pred, color = Species)) +
 ```
 
 Faisons apparaître les deux ensembles.
+
 ```{r apparaître les deux}
 grid.arrange(plot_G, plot_DBH, ncol = 2)
 ```
