--- a/BD_CHM.Rmd
+++ b/BD_CHM.Rmd
@@ -140,11 +140,48 @@ CHM_censusYear <- CHM_censusYear %>%
 BD_esp_CHM <- read.csv("~/cours_r/Stage_M2/BD_esp_CHM.csv", row.names=1)
 ## Jointure
 BD_CHM <- left_join(BD_esp_CHM, CHM_censusYear, by = c("idRegePlot","CensusYear"))
-
-# Exportation
-#write.csv(BD_CHM, file = "BD_CHM.csv")
 ```
 
-C'est réussi bien jouée !
+## Surface terrière
+Nous souhaitons faire une comparaison entre la surface terrière et la hauteur de canopée. Nous allons donc ajouter au calcule la surface terrière
 
-Fin de script
+```{r importation Guyafor, include = F}
+P1 <- read.csv("~/cours_r/Stage_M2/ParacouP1AllYears.csv", comment.char="#")
+P6 <- read.csv("~/cours_r/Stage_M2/ParacouP6AllYears.csv", comment.char="#")
+P11 <- read.csv("~/cours_r/Stage_M2/ParacouP11AllYears.csv", comment.char="#")
+
+# Fusion des parcelles
+Guyafor <- rbind(P1,P6,P11)
+```
+
+Essayons alors
+```{r surface_terriere}
+# Sélection des années RegePlot, individus vivants
+BD_env <- Guyafor %>%
+  filter(CensusYear %in% c(2008, 2013, 2016) &
+           CodeAlive==1 ) %>%
+  dplyr::select(idTree,Xutm,Yutm, Family,Genus,Species, CircCorr, CensusYear) %>% #drop columns
+  st_as_sf(coords = c('Xutm', 'Yutm'), crs=2972) %>% # data.frame -> sf object 'POINT' avec crs RFGF95 UTM 22N
+  dplyr::mutate(DBH=CircCorr/pi) %>%
+  dplyr::mutate(ST=((((DBH/100)^2)*pi)/4)) # DBH en m par arbre
+
+# Ensemble des données + placette
+ BD_env_placette <- st_intersection(PlacettesP1_6_11_buffer, BD_env) %>% 
+    st_drop_geometry() # retrait géométrie
+
+# Calcule de la surface terrière
+BD_env_placette <- BD_env_placette %>%
+group_by(idRegePlot, CensusYear) %>% # calcule terrière par année
+  dplyr::summarise(G = sum(ST), nombre_tiges = n()) %>%
+# summarise : somme Surface Terriere par placette (m2) et nombre de tiges dans le buffer de 15m
+ungroup()
+
+# Reliage à id.Rege de la matrice des 6esp
+BD_CHM <- dplyr::left_join(BD_CHM, BD_env_placette, by = c( "idRegePlot", "CensusYear"))
+
+# Exportation
+# write.csv(BD_CHM, file = "BD_CHM.csv")
+```
+
+C'est bon c'est gagné
+FIN de script ! 
